# MINI2-IR-Android-App

./: .cursorignore  .gitignore  FEATURE_TRACKER.md  FSRCNN_SUPER_RESOLUTION.md  LICENSE  PROJECT_CONTEXT.md  README.md  alternative_solution.py  convert_to_tflite.py  inspect_model.py  settings.gradle.kts  test_build.sh  test_registry_compile.cpp
android_assets/: INSTRUCTIONS.md
app/: build.gradle.kts
app/src/androidTest/java/com/example/ircmd_handle/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: fsrcnn_x2.tflite
app/src/main/cpp/: CMakeLists.txt  camera_function_registry.cpp  camera_function_registry.h  ircmd_manager.cpp  ircmd_manager.h  ircmd_strategy.md  native-lib.cpp  uvc_manager.cpp  uvc_manager.h
app/src/main/cpp/Include/: libiruvc.h
app/src/main/java/com/example/ircmd_handle/: CameraActivity.kt  DeviceConfig.kt  IrcmdApplication.kt  IrcmdManager.kt  MainActivity.kt  TfLiteTestActivity.kt  VideoRecorder.kt
app/src/main/res/drawable/: ic_expand_less.xml  ic_fullscreen_exit.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_tflite_test.xml  dialog_add_device.xml  dialog_manage_devices.xml  item_device_config.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/example/ircmd_handle/: ExampleUnitTest.kt
docs/: CUSTOM_THERMAL_MODELS_CONSIDERATIONS.md  FSRCNN_IMPLEMENTATION_PLAN.md  PHASE1_DETAILED_PLAN.md  PHASE1_MODEL_COMPARISON_TABLE.md  PRD_TEMPLATE.md  PRD_TFLITE_SUPER_RESOLUTION.md  PRD_VIDEO_RECORDING.md  SAAFKE_FSRCNN_QUICK_START.md  STEP1_LITERT_RESEARCH_FINDINGS.md  STEP2_MODEL_RESEARCH_FINDINGS.md  STEP2_UPDATED_FLEXIBLE_INPUT_MODELS.md  STEP3_IMPLEMENTATION_GUIDE.md
docs/archived/: ircmd_strategy.md  unrooted_android.c.md  verify_implementation.md
gradle/wrapper/: gradle-wrapper.properties
